fix: correção dos testes - era a tipagem de age e weight que tava errada